--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple backend for meichuhackathon",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
     "test": "mocha ./src/tests/*.test.js --exit"
   },
